inputted stats, got everything working properly

--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
             </theader>
             <tbody>
 	            <tr>
-	                <td class="name-1">NAME1</td>
-	                <td class="name-1">RESULTS1</td>
-	            </tr>
-	            <tr>
-	                <td class="name-2">NAME2</td>
-	                <td class="name-2">RESULTS2</td>
-	            </tr>
-	            <tr>
 	                <td class="winner">WINNER:</td>
 	                <td class="winner">WINNER NAME</td>
 	            </tr>
@@ -49,7 +41,7 @@
                 <td class="name-1">RESULTS1</td>
                 <td class="name-2">NAME2</td>
                 <td class="name-2">RESULTS2</td>
-                <th>WINNER</th>
+                <th>WINNER:</th>
                 <th>Name</th>
             </tr>
             </tbody>
